ecmascript/parser/tests/test262-error-references/fail/52a2eb6caebf1bf7.js.stderr
error: TS1009
 --> $DIR/tests/test262-parser/fail/52a2eb6caebf1bf7.js:1:6
  |
1 | var x,
  |      ^

